added css to game_catalog and made login function and recieve and send token

--- a/souls-similar-ranking/src/Client/App.css
+++ b/souls-similar-ranking/src/Client/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: myFont;
+  src: url(./assets/OptimusPrinceps.ttf);
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +45,117 @@
 .read-the-docs {
   color: #888;
 }
+
+/* Catalog Games */
+
+.gameMasterDiv{
+  /* display: absolute; */
+  left: 0;
+  right: 150%;
+  display: grid;
+  grid-template-columns: 45% 45%;
+  grid-template-rows: 31% 31% 31%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 70svw;
+  aspect-ratio: 1;
+}
+
+.gameDiv{
+  position: relative;
+  width: auto;
+  height: auto;
+  border-radius: 15px;
+  margin: 3%;
+}
+
+.gameDiv > img{
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+
+.gameDiv > div{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background-color: black;
+  opacity: 0%;
+  transition: .5s;
+}
+
+.gameName{
+  margin-top: 30%;
+  margin-bottom: 25%;
+  color: white;
+  font-size: 25pt;
+  font-family: myFont;
+  font-weight: lighter;
+}
+
+.gameDiv:hover > div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background-color: black;
+  opacity: 85%;
+  transition: .5s;
+}
+
+/* ---------------------------- */
+
+
+/* Login */
+
+.formDiv{
+  position: absolute;
+  top: 10svh;
+  left: 25%;
+  width: 50svw;
+  aspect-ratio: 1.6;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.form{
+  position: relative;
+  width: 50svw;
+  aspect-ratio: 1.6;
+}
+
+.form > h2{
+  font-size: 35pt;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.form > p{
+  font-size: 10pt;
+  margin-top: 5px;
+  margin-bottom: 8svh;
+}
+
+.formInputs{
+  width: 10svw;
+  aspect-ratio: 6;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  border-color: grey;
+}
+
+#formError{
+  color: red;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* ---------------------------- */
